features/agent/tools/dsl/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "\n";
  const peg$c1 = "//";
  const peg$c2 = "shape";
  const peg$c3 = "rect";
  const peg$c4 = "ellipse";
  const peg$c5 = "diamond";
  const peg$c6 = "roundRect";
  const peg$c7 = "cloud";
  const peg$c8 = "star";
  const peg$c9 = "triangle";
  const peg$c10 = "parallelogram";
  const peg$c11 = "hexagon";
  const peg$c12 = "sticky";
  const peg$c13 = "color:";
  const peg$c14 = "yellow";
  const peg$c15 = "blue";
  const peg$c16 = "green";
  const peg$c17 = "pink";
  const peg$c18 = "purple";
  const peg$c19 = "orange";
  const peg$c20 = "text";
  const peg$c21 = "connect";
  const peg$c22 = "id:";
  const peg$c23 = "->";
  const peg$c24 = "label:";
  const peg$c25 = "style:";
  const peg$c26 = "straight";
  const peg$c27 = "curve";
  const peg$c28 = "elbow";
  const peg$c29 = "mindmap";
  const peg$c30 = "  ";
  const peg$c31 = "\t";
  const peg$c32 = "mermaid";
  const peg$c33 = "```";
  const peg$c34 = "patch";
  const peg$c35 = ":";
  const peg$c36 = "fill";
  const peg$c37 = "stroke";
  const peg$c38 = "strokeWidth";
  const peg$c39 = "color";
  const peg$c40 = "#";
  const peg$c41 = "layout";
  const peg$c42 = "grid";
  const peg$c43 = "row";
  const peg$c44 = "near:";
  const peg$c45 = "\"";

  const peg$r0 = /^[ \t]/;
  const peg$r1 = /^[^\n]/;
  const peg$r2 = /^[0-9a-fA-F]/;
  const peg$r3 = /^[0-9]/;
  const peg$r4 = /^[^"]/;
  const peg$r5 = /^[a-zA-Z0-9_]/;

  const peg$e0 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e1 = peg$literalExpectation("\n", false);
  const peg$e2 = peg$literalExpectation("//", false);
  const peg$e3 = peg$classExpectation(["\n"], true, false, false);
  const peg$e4 = peg$literalExpectation("shape", false);
  const peg$e5 = peg$literalExpectation("rect", false);
  const peg$e6 = peg$literalExpectation("ellipse", false);
  const peg$e7 = peg$literalExpectation("diamond", false);
  const peg$e8 = peg$literalExpectation("roundRect", false);
  const peg$e9 = peg$literalExpectation("cloud", false);
  const peg$e10 = peg$literalExpectation("star", false);
  const peg$e11 = peg$literalExpectation("triangle", false);
  const peg$e12 = peg$literalExpectation("parallelogram", false);
  const peg$e13 = peg$literalExpectation("hexagon", false);
  const peg$e14 = peg$literalExpectation("sticky", false);
  const peg$e15 = peg$literalExpectation("color:", false);
  const peg$e16 = peg$literalExpectation("yellow", false);
  const peg$e17 = peg$literalExpectation("blue", false);
  const peg$e18 = peg$literalExpectation("green", false);
  const peg$e19 = peg$literalExpectation("pink", false);
  const peg$e20 = peg$literalExpectation("purple", false);
  const peg$e21 = peg$literalExpectation("orange", false);
  const peg$e22 = peg$literalExpectation("text", false);
  const peg$e23 = peg$literalExpectation("connect", false);
  const peg$e24 = peg$literalExpectation("id:", false);
  const peg$e25 = peg$literalExpectation("->", false);
  const peg$e26 = peg$literalExpectation("label:", false);
  const peg$e27 = peg$literalExpectation("style:", false);
  const peg$e28 = peg$literalExpectation("straight", false);
  const peg$e29 = peg$literalExpectation("curve", false);
  const peg$e30 = peg$literalExpectation("elbow", false);
  const peg$e31 = peg$literalExpectation("mindmap", false);
  const peg$e32 = peg$literalExpectation("  ", false);
  const peg$e33 = peg$literalExpectation("\t", false);
  const peg$e34 = peg$literalExpectation("mermaid", false);
  const peg$e35 = peg$literalExpectation("```", false);
  const peg$e36 = peg$anyExpectation();
  const peg$e37 = peg$literalExpectation("patch", false);
  const peg$e38 = peg$literalExpectation(":", false);
  const peg$e39 = peg$literalExpectation("fill", false);
  const peg$e40 = peg$literalExpectation("stroke", false);
  const peg$e41 = peg$literalExpectation("strokeWidth", false);
  const peg$e42 = peg$literalExpectation("color", false);
  const peg$e43 = peg$literalExpectation("#", false);
  const peg$e44 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false, false);
  const peg$e45 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e46 = peg$literalExpectation("layout", false);
  const peg$e47 = peg$literalExpectation("grid", false);
  const peg$e48 = peg$literalExpectation("row", false);
  const peg$e49 = peg$literalExpectation("near:", false);
  const peg$e50 = peg$literalExpectation("\"", false);
  const peg$e51 = peg$classExpectation(["\""], true, false, false);
  const peg$e52 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e53 = peg$otherExpectation("whitespace");

  function peg$f0(statements) {    return { statements: statements.filter(Boolean), errors: [] };  }
  function peg$f1() {    return null;  }
  function peg$f2() {    return null;  }
  function peg$f3(shape, text, id) {
    return { type: 'shape', shape, text, id: id || undefined };
  }
  function peg$f4() {    return 'rect';  }
  function peg$f5() {    return 'ellipse';  }
  function peg$f6() {    return 'diamond';  }
  function peg$f7() {    return 'roundRect';  }
  function peg$f8() {    return 'cloud';  }
  function peg$f9() {    return 'star';  }
  function peg$f10() {    return 'triangle';  }
  function peg$f11() {    return 'parallelogram';  }
  function peg$f12() {    return 'hexagon';  }
  function peg$f13(text, id) {
    return { type: 'sticky', text, color: color || undefined, id: id || undefined };
  }
  function peg$f14() {    return 'yellow';  }
  function peg$f15() {    return 'blue';  }
  function peg$f16() {    return 'green';  }
  function peg$f17() {    return 'pink';  }
  function peg$f18() {    return 'purple';  }
  function peg$f19() {    return 'orange';  }
  function peg$f20(text, id) {
    return { type: 'text', text, id: id || undefined };
  }
  function peg$f21(sourceId, targetId) {
    return { type: 'connect', sourceId, targetId, label: label || undefined, style: style || undefined };
  }
  function peg$f22() {    return 'straight';  }
  function peg$f23() {    return 'curve';  }
  function peg$f24() {    return 'elbow';  }
  function peg$f25(text, children) {
    return { type: 'mindmap', root: { text, children: children.length > 0 ? children : undefined } };
  }
  function peg$f26(indent, text, children) {
    const child = { text };
    if (children.length > 0) {
      child.children = children;
    }
    return child;
  }
  function peg$f27(code) {
    return { type: 'mermaid', code };
  }
  function peg$f28(code) {    return code;  }
  function peg$f29(chars) {    return chars.join('').trim();  }
  function peg$f30(id, props) {
    return { type: 'patch', id, props: Object.fromEntries(props) };
  }
  function peg$f31(name, value) {
    return [name, value];
  }
  function peg$f32() {    return 'text';  }
  function peg$f33() {    return 'fill';  }
  function peg$f34() {    return 'stroke';  }
  function peg$f35() {    return 'strokeWidth';  }
  function peg$f36() {    return 'color';  }
  function peg$f37(chars) {    return '#' + chars.join('');  }
  function peg$f38(digits) {    return digits.join('');  }
  function peg$f39(mode) {
    if (mode.mode === 'near') {
      return { type: 'layout', mode: 'near', nearId: mode.id };
    }
    return { type: 'layout', mode };
  }
  function peg$f40() {    return 'grid';  }
  function peg$f41() {    return 'row';  }
  function peg$f42(id) {    return { mode: 'near', id };  }
  function peg$f43(chars) {    return chars.join('');  }
  function peg$f44(chars) {    return chars.join('');  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsestatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsestatement();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parsestatement() {
    let s0;

    s0 = peg$parseshapeStatement();
    if (s0 === peg$FAILED) {
      s0 = peg$parsestickyStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parsetextStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseconnectStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parsemindmapStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parsemermaidStatement();
              if (s0 === peg$FAILED) {
                s0 = peg$parsepatchStatement();
                if (s0 === peg$FAILED) {
                  s0 = peg$parselayoutStatement();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseblankLine();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsecommentLine();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseblankLine() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = input.charAt(peg$currPos);
      if (peg$r0.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    if (input.charCodeAt(peg$currPos) === 10) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecommentLine() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = input.charAt(peg$currPos);
      if (peg$r0.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r1.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r1.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
      if (input.charCodeAt(peg$currPos) === 10) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseshapeStatement() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseshapeType();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsestring();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseid();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              s7 = peg$parseeos();
              if (s7 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f3(s3, s5, s6);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseshapeType() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f4();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f5();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 7) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 7;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f6();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 9) === peg$c6) {
            s1 = peg$c6;
            peg$currPos += 9;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f7();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 5) === peg$c7) {
              s1 = peg$c7;
              peg$currPos += 5;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e9); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f8();
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.substr(peg$currPos, 4) === peg$c8) {
                s1 = peg$c8;
                peg$currPos += 4;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e10); }
              }
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$f9();
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.substr(peg$currPos, 8) === peg$c9) {
                  s1 = peg$c9;
                  peg$currPos += 8;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e11); }
                }
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$f10();
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  if (input.substr(peg$currPos, 13) === peg$c10) {
                    s1 = peg$c10;
                    peg$currPos += 13;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e12); }
                  }
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$f11();
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.substr(peg$currPos, 7) === peg$c11) {
                      s1 = peg$c11;
                      peg$currPos += 7;
                    } else {
                      s1 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e13); }
                    }
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$f12();
                    }
                    s0 = s1;
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsestickyStatement() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c12) {
      s1 = peg$c12;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e14); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsestring();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          if (input.substr(peg$currPos, 6) === peg$c13) {
            s5 = peg$c13;
            peg$currPos += 6;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e15); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parsestickyColor();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parseid();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s6 = peg$parseeos();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f13(s3, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestickyColor() {
    let s0, s1;
